--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,23 @@ body {
   margin: 0;
 }
 
-.formContainer {
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+      @content;
+    }
+  }
+  @mixin tablet {
+    @media screen and (max-width: 768px) {
+      @content;
+    }
+  }
+  @mixin laptop {
+    @media screen and (max-width: 1200px) {
+      @content;
+    }
+  }
+  
+  .formContainer {
     background-color: #a7bcff;
     height: 100vh;
     display: flex;
@@ -94,7 +110,9 @@ body {
       height: 80%;
       display: flex;
       overflow: hidden;
-      
+      @include tablet {
+       width: 90%;
+      }
   
       .sidebar {
         flex: 1;
@@ -112,7 +130,9 @@ body {
   
           .logo {
             font-weight: bold;
-            
+            @include tablet {
+              display: none;
+            }
           }
   
           .user {
@@ -133,7 +153,10 @@ body {
               font-size: 10px;
               border: none;
               cursor: pointer;
-             
+              @include tablet {
+                position: absolute;
+                bottom: 10px;
+              }
             }
           }
         }
@@ -189,23 +212,122 @@ body {
       }
       .chat {
         flex: 2;
-
-        .chatInfo{
-            height: 50px;
-            background-color: #5d5b8d;
+  
+        .chatInfo {
+          height: 50px;
+          background-color: #5d5b8d;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 10px;
+          color: lightgray;
+        }
+  
+        .chatIcons {
+          display: flex;
+          gap: 10px;
+  
+          img {
+            height: 24px;
+            cursor: pointer;
+          }
+        }
+  
+        .messages {
+          background-color: #ddddf7;
+          padding: 10px;
+          height: calc(100% - 160px);
+          overflow: scroll;
+  
+          .message {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+  
+            .messageInfo {
+              display: flex;
+              flex-direction: column;
+              color: gray;
+              font-weight: 300;
+  
+              img {
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                object-fit: cover;
+              }
+            }
+            .messageContent {
+              max-width: 80%;
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+  
+              p {
+                background-color: white;
+                padding: 10px 20px;
+                border-radius: 0px 10px 10px 10px;
+                max-width: max-content;
+              }
+  
+              img {
+                width: 50%;
+              }
+            }
+  
+            &.owner {
+              flex-direction: row-reverse;
+  
+              .messageContent {
+                align-items: flex-end;
+                p {
+                  background-color: #8da4f1;
+                  color: white;
+                  border-radius: 10px 0px 10px 10px;
+                }
+              }
+            }
+          }
+        }
+  
+        .input {
+          height: 50px;
+          background-color: white;
+          padding: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          z-index: 2;
+  
+          input {
+            width: 100%;
+            border: none;
+            outline: none;
+            color: #2f2d52;
+            font-size: 18px;
+  
+            &::placeholder {
+              color: lightgray;
+            }
+          }
+  
+          .send {
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-            color: lightgray;
-        }
-
-        .chatIcons{
-            display: flex;
             gap: 10px;
             cursor: pointer;
+            color: lightgray;
+
+  
+            button {
+              border: none;
+              padding: 10px 15px;
+              color: white;
+              background-color: #8da4f1;
+              cursor: pointer;
+            }
+          }
         }
       }
     }
   }
-
